--- a/css/eulerface_select.css
+++ b/css/eulerface_select.css
@@ -2,17 +2,17 @@
 	position: fixed;
 	visibility: hidden;
 	background: white;
-	margin-top: -8px;
-	border-radius: 0 0 8px 8px;
-	border: solid 1px #909080;
+	margin-top: -1em;
+	border-radius: 0 0 1em 1em;
+	border: solid .1em #909080;
 	border-top: none;
 	overflow-y: scroll;
 }
 
 .selectContainer {
 	display: table;
-	border: solid 1px #909080;
-	border-radius: 8px;
+	border: solid .1em #909080;
+	border-radius: .6em;
 	width: 100%;
 }
 
@@ -23,23 +23,23 @@
 
 .dropper {
 	display: table-cell;
-	width: 10%;
+	width: 1.2em;
 	height: 100%;
-	border-left: 1px solid rgba(144, 144, 128, .4);
+	border-left: .1em solid rgba(144, 144, 128, .4);
 }
 
 .dropper:hover .arrow-down {
-	border-top: 12px solid orangered;
+	border-top-color: orangered;
 }
 
 .arrow-down {
 	width: 0; 
 	height: 0; 
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
+	border-left: .4em solid transparent;
+	border-right: .4em solid transparent;
 	margin-left: auto;
 	margin-right: auto;
-	border-top: 12px solid #909080;
+	border-top: .6em solid #909080;
 	user-select: none;
 }
 
