--- a/css/eulerface_layout_l.css
+++ b/css/eulerface_layout_l.css
@@ -7,8 +7,8 @@ body {
 	top: 0;
 	position: fixed;
 	left: 0;
-	width: 3em;
-	height: 100%;
+	width: 100%;
+	height: 3em;
 }
 
 #logo {
@@ -38,6 +38,7 @@ body {
 
 .articleContent {
 	width: 54em;
+	margin-top: 2rem;
 	max-width: none;
 	margin-left: auto;
 	margin-right: auto;
