--- a/css/eulerface_layout_l.css
+++ b/css/eulerface_layout_l.css
@@ -83,6 +83,9 @@ body {
 
 
 .bodyText {
+	padding-top: 0;
+	margin-top: 0;
+	border-top: none;
 	width: 36em;
 	padding-left: 1em;
 	padding-right: 1em;
