--- a/css/eulerface_layout_m.css
+++ b/css/eulerface_layout_m.css
@@ -75,9 +75,12 @@ body {
 
 
 .bodyText {
-	width: 44vw;
-	padding-left: 1vw;
-	padding-right: 1vw;
+	padding-top: 0;
+	margin-top: 0;
+	border-top: none;
+	width: 36em;
+	padding-left: 1em;
+	padding-right: 1em;
 }
 
 .dynamicBlock {
