--- a/css/eulerface_layout_l.css
+++ b/css/eulerface_layout_l.css
@@ -71,22 +71,37 @@ body {
 
 .visualDesc {
 	position: absolute;
-	left: -11em;
+	color: rgba(0, 0, 0, .6);
+	left: -11rem;
 	top: 0;
-	width: 9em;
-	font-size: 12pt;
+	width: 9rem;
+	font-size: .8rem;
 	text-align: right;
-	padding-top: .6em;
-	padding-left: 1em;
-	padding-right: 1em;	
+	padding-top: .6rem;
+	padding-left: 1rem;
+	padding-right: 1rem;	
+}
+
+
+.sideNote {	
+	position: absolute;
+	color: rgba(0, 0, 0, .6);
+	top: 0;
+	left: 37rem;
+	width: 16rem;
+	font-size: .8rem;
+	padding-top: .6rem;
+	padding-left: 0;
+	padding-right: 0;	
 }
 
 
 .bodyText {
+	position: relative;
 	padding-top: 0;
 	margin-top: 0;
 	border-top: none;
-	width: 36em;
+	width: 34em;
 	padding-left: 1em;
 	padding-right: 1em;
 }
