--- a/css/eulerface_layout_s.css
+++ b/css/eulerface_layout_s.css
@@ -75,6 +75,17 @@ body {
 }
 
 
+.sideNote {	
+	color: rgba(0, 0, 0, .6);
+	font-size: .8rem;
+	margin-top: .6rem;
+	border-top: 1px solid rgba(0, 0, 0, .6);
+	padding-top: .6rem;
+	padding-left: 3.5rem;
+	width: 18rem;
+}
+
+
 .bodyText {
 	margin-top: 2rem;
 	border-top: 1px solid rgba(0, 0, 0, .6);
